combine normal page 1 and organization page 1

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -216,7 +216,7 @@
 </div>
 
 <!-- PAGE 1 -->
-<div class="page1 normal">
+<div class="page1">
     <!-- CHARACTER INFO FIELDS -->
     <div class="info-grid">
         <!-- Row 1 -->
@@ -226,7 +226,7 @@
         <input type="text" name="attr_character_name">
         <div class="spacer"></div>
         <div class="input-label">
-            <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
+            <span class="mortal vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
             <span class="vampire2" data-i18n="mask" >Mask:</span>
             <span class="werewolf2" data-i18n="blood" >Blood:</span>
             <span class="beast" data-i18n="life" >Life:</span>
@@ -237,6 +237,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="age" >Age:</span>
+            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="clan" >Clan:</span>
             <span class="werewolf" data-i18n="auspice" >Auspice:</span>
             <span class="mage" data-i18n="path" >Path:</span>
@@ -251,12 +252,13 @@
         <input type="text" name="attr_Chronicle">
         <!-- Row 2 -->
         <div class="input-label">
-            <span data-i18n="player">Player:</span>
+            <span class="mortal1 mortal2 vampire werewolf mage promethean changeling geist mummy hunter demon" data-i18n="player">Player:</span>
         </div>
         <input type="text" name="attr_Age">
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="vice" >Vice:</span>
+            <span class="mortal2-organization" data-i18n="creed" >Creed:</span>
             <span class="vampire2" data-i18n="dirge" >Dirge:</span>
             <span class="werewolf2" data-i18n="bone" >Bone:</span>
             <span class="beast" data-i18n="legend" >Legend:</span>
@@ -267,6 +269,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="faction" >Faction:</span>
+            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="bloodline" >Bloodline:</span>
             <span class="werewolf" data-i18n="tribe" >Tribe:</span>
             <span class="mage" data-i18n="order" >Order:</span>
@@ -292,6 +295,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="group-name" >Group Name:</span>
+            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="covenant" >Covenant:</span>
             <span class="werewolf" data-i18n="lodge" >Lodge:</span>
             <span class="mage" data-i18n="legacy" >Legacy:</span>
@@ -309,7 +313,7 @@
     <div class="spacer"></div>
 
     <!-- ATTRIBUTE FIELDS -->
-    <div class="3colrow">
+    <div class="normal 3colrow">
         <table class="attributes">
             <tbody>
                 <tr>
@@ -393,10 +397,77 @@
         </table>
     </div>
 
+    <!-- SIMPLE ATTRIBUTE FIELDS -->
+    <div class="organization columns">
+        <div class="simple-attribute">
+            <div class="subheader">
+                <input type="hidden" class="flag" name="attr_power_flag" value="0" />
+                <button type="action" class="toggle" name="act_power" data-i18n="power">Power</button>
+            </div>
+            <div class="dots spread">
+                <input type="hidden" name="attr_power" value="1" />
+                <button type="action" class="dot" name="act_power_1"></button>
+                <button type="action" class="dot gt-1" name="act_power_2"></button>
+                <button type="action" class="dot gt-1 gt-2" name="act_power_3"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_power_4"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_power_5"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_power_6"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_power_7"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_power_8"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_power_9"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_power_10"></button>
+            </div>
+        </div>
+        <div class="horizontal-spacer"></div>
+        <div class="horizontal-spacer"></div>
+        <div class="horizontal-spacer"></div>
+        <div class="simple-attribute">
+            <div class="subheader">
+                <input type="hidden" class="flag" name="attr_finesse_flag" value="0" />
+                <button type="action" class="toggle" name="act_finesse" data-i18n="finesse">Finesse</button>
+            </div>
+            <div class="dots spread">
+                <input type="hidden" name="attr_finesse" value="1" />
+                <button type="action" class="dot" name="act_finesse_1"></button>
+                <button type="action" class="dot gt-1" name="act_finesse_2"></button>
+                <button type="action" class="dot gt-1 gt-2" name="act_finesse_3"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_finesse_4"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_finesse_5"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_finesse_6"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_finesse_7"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_finesse_8"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_finesse_9"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_finesse_10"></button>
+            </div>
+        </div>
+        <div class="horizontal-spacer"></div>
+        <div class="horizontal-spacer"></div>
+        <div class="horizontal-spacer"></div>
+        <div class="simple-attribute">
+            <div class="subheader">
+                <input type="hidden" class="flag" name="attr_resistance_flag" value="0" />
+                <button type="action" class="toggle" name="act_resistance" data-i18n="resistance">Resistance</button>
+            </div>
+            <div class="dots spread">
+                <input type="hidden" name="attr_resistance" value="1" />
+                <button type="action" class="dot" name="act_resistance_1"></button>
+                <button type="action" class="dot gt-1" name="act_resistance_2"></button>
+                <button type="action" class="dot gt-1 gt-2" name="act_resistance_3"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_resistance_4"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_resistance_5"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_resistance_6"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_resistance_7"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_resistance_8"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_resistance_9"></button>
+                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_resistance_10"></button>
+            </div>
+        </div>
+    </div>
+
     <div class="el_spacer"></div>
 
     <!-- SKILL FIELDS -->
-    <div class="skills">
+    <div class="normal skills">
         <table>
             <tbody>
                 <tr>
@@ -640,7 +711,7 @@
     </div>
 
     <!-- OTHER TRAITS -->
-    <div class="othertraits">
+    <div class="normal othertraits">
         <table class="merits">
             <tbody>
                 <tr>
@@ -1599,149 +1670,9 @@
             </tbody>
         </table>
     </div>
-</div>
-
-<div class="page1 organization">
-    <!-- ORGAGNIZATION INFO FIELDS -->
-    <div class="columns">
-        <div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="name" >Name:</span>
-                </div>
-                <input type="text" name="attr_character_name">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span class="mortal2-organization" data-i18n="category" >Category:</span>
-                    <span class="geist2-organization" data-i18n="archtype" >Archetype:</span>
-                </div>
-                <input type="text" name="attr_character_axis_1">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="cronicle" >Chronicle:</span>
-                </div>
-                <input type="text" name="attr_Chronicle">
-            </div>
-        </div>
-        <div class="horizontal-spacer"></div>
-        <div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="virtue" >Virtue:</span>
-                </div>
-                <input type="text" name="attr_Virtue">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="creed" >Creed:</span>
-                </div>
-                <input type="text" name="attr_Vice">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="concept" >Concept:</span>
-                </div>
-                <input type="text" name="attr_Concept">
-            </div>
-        </div>
-        <div class="horizontal-spacer"></div>
-        <div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="doctrine" >Doctrine:</span>
-                </div>
-                <input type="text" name="attr_organization_doctrine_1">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="doctrine" >Doctrine:</span>
-                </div>
-                <input type="text" name="attr_organization_doctrine_2">
-            </div>
-            <div class="input-group">
-                <div class="input-label">
-                    <span data-i18n="doctrine" >Doctrine:</span>
-                </div>
-                <input type="text" name="attr_organization_doctrine_3">
-            </div>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <!-- ATTRIBUTE FIELDS -->
-    <div class="columns">
-        <div class="simple-attribute">
-            <div class="subheader">
-                <input type="hidden" class="flag" name="attr_power_flag" value="0" />
-                <button type="action" class="toggle" name="act_power" data-i18n="power">Power</button>
-            </div>
-            <div class="dots spread">
-                <input type="hidden" name="attr_power" value="1" />
-                <button type="action" class="dot" name="act_power_1"></button>
-                <button type="action" class="dot gt-1" name="act_power_2"></button>
-                <button type="action" class="dot gt-1 gt-2" name="act_power_3"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_power_4"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_power_5"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_power_6"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_power_7"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_power_8"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_power_9"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_power_10"></button>
-            </div>
-        </div>
-        <div class="horizontal-spacer"></div>
-        <div class="horizontal-spacer"></div>
-        <div class="horizontal-spacer"></div>
-        <div class="simple-attribute">
-            <div class="subheader">
-                <input type="hidden" class="flag" name="attr_finesse_flag" value="0" />
-                <button type="action" class="toggle" name="act_finesse" data-i18n="finesse">Finesse</button>
-            </div>
-            <div class="dots spread">
-                <input type="hidden" name="attr_finesse" value="1" />
-                <button type="action" class="dot" name="act_finesse_1"></button>
-                <button type="action" class="dot gt-1" name="act_finesse_2"></button>
-                <button type="action" class="dot gt-1 gt-2" name="act_finesse_3"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_finesse_4"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_finesse_5"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_finesse_6"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_finesse_7"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_finesse_8"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_finesse_9"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_finesse_10"></button>
-            </div>
-        </div>
-        <div class="horizontal-spacer"></div>
-        <div class="horizontal-spacer"></div>
-        <div class="horizontal-spacer"></div>
-        <div class="simple-attribute">
-            <div class="subheader">
-                <input type="hidden" class="flag" name="attr_resistance_flag" value="0" />
-                <button type="action" class="toggle" name="act_resistance" data-i18n="resistance">Resistance</button>
-            </div>
-            <div class="dots spread">
-                <input type="hidden" name="attr_resistance" value="1" />
-                <button type="action" class="dot" name="act_resistance_1"></button>
-                <button type="action" class="dot gt-1" name="act_resistance_2"></button>
-                <button type="action" class="dot gt-1 gt-2" name="act_resistance_3"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3" name="act_resistance_4"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4" name="act_resistance_5"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5" name="act_resistance_6"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6" name="act_resistance_7"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7" name="act_resistance_8"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8" name="act_resistance_9"></button>
-                <button type="action" class="dot gt-1 gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9" name="act_resistance_10"></button>
-            </div>
-        </div>
-    </div>
-    
-    <div class="spacer"></div>
 
     <!-- MERITS AND CEREMONIES -->
-    <div class="columns">
+    <div class="organization columns">
         <div>
             <div class="subheader">
                 <span data-i18n="merits">Merits</span>
@@ -2143,10 +2074,10 @@
         </div>
     </div>
 
-    <div class="spacer"></div>
+    <div class="organization spacer"></div>
 
     <!-- MEMBERS AND REGALIA -->
-    <div class="columns">
+    <div class="organization columns">
         <div>
             <div class="subheader">
                 <span data-i18n="members">Members</span>
@@ -2175,7 +2106,7 @@
     </div>
 
     <!-- MEMBERSHIP AND STANDING -->
-    <div class="columns">
+    <div class="organization columns">
         <div>
             <div class="subheader">
                 <span class="mortal" data-i18n="membership">Membership</span>
