Fixing missing attributes and wrong names

--- a/Agone-(french)/agone-sheet.html
+++ b/Agone-(french)/agone-sheet.html
@@ -377,7 +377,7 @@
 			<input type="checkbox" name="attr_pcSleepWalking" class="pc-sorrow">
 			<span class="pc-sorrow-value">50</span>
 			<span class="pc-sorrow-lbl">Insomniaque</span>
-			<input type="checkbox" name="attr_pcInsomina" class="pc-sorrow">
+			<input type="checkbox" name="attr_pcInsomnia" class="pc-sorrow">
 			<span class="pc-sorrow-value">55</span>
 			<span class="pc-sorrow-lbl">Mépris</span>
 			<input type="checkbox" name="attr_pcContempt" class="pc-sorrow">
@@ -422,7 +422,7 @@
 			<input type="checkbox" name="attr_pcInnerPortal" class="pc-sorrow">
 			<span class="pc-sorrow-value">99</span>
 			<span class="pc-sorrow-lbl">Ombre de la Perfidie</span>
-			<input type="checkbox" name="attr_pcShaowOfPerfidy" class="pc-sorrow">
+			<input type="checkbox" name="attr_pcShadowOfPerfidy" class="pc-sorrow">
 			<span class="pc-sorrow-value">100</span>
 			<span class="pc-sorrow-lbl">Déchu</span>
 			<input type="checkbox" name="attr_pcFinalMetamorphosis" class="pc-sorrow">
@@ -529,6 +529,8 @@
 			<span>Défense naturelle</span>
 			<input type="number" name="attr_pcNaturalDefense" title="AGIlité+Bonus de Corps-Malus de l'armure" value="@{pcAgility}+@{pcBodyBonus}+@{pcArmorPenalty}" disabled>
 			<button class="dice" type="roll" value="&{template:agone-natural-defense} {{name=@{character_name}}} {{NaturalDefense=[[1d10!+@{pcNaturalDefense}+?{Bonus/Malus|0}]]}}" name="roll_pc-natural-defense"></button>
+			<span>Distance</span>
+			<input type="number" name="attr_pcDistanceDodge" title="(AGIlité+Esquive)/2">
 		</div>
 		<div class="pc-weapons grid">
 			<span class="title">Nom</span>
@@ -722,53 +724,61 @@
 	</div>
 	<div class="companion-chars grid">
 		<span>AGI</span>
-		<input type="number" name="attr_companionAgility" title="AGIlité du compagnon">
+		<input type="number" name="attr_companionAgility" class="half-number item-right" title="AGIlité du compagnon">
+		<input type="number" name="attr_companionAgilityExp" class="half-number item-left" title="Expérience dépensée en AGIlité du compagnon">
 		<span>FOR</span>
-		<input type="number" name="attr_companionStrength" title="FORce du compagnon">
+		<input type="number" name="attr_companionStrength" class="half-number item-right" title="FORce du compagnon">
+		<input type="number" name="attr_companionStrengthExp" class="half-number item-left" title="Expérience dépensée en FORce du compagnon">
 		<span>PER</span>
-		<input type="number" name="attr_companionPerception" title="PERception du compagnon">
+		<input type="number" name="attr_companionPerception" class="half-number item-right" title="PERception du compagnon">
+		<input type="number" name="attr_companionPerceptionExp" class="half-number item-left" title="Expérience dépensée en Perception du compagnon">
 		<span>RÉS</span>
-		<input type="number" name="attr_companionStamina" title="RÉSistance du compagnon">
+		<input type="number" name="attr_companionStamina" class="half-number item-right" title="RÉSistance du compagnon">
+		<input type="number" name="attr_companionStaminaExp" class="half-number item-left" title="Expérience dépensée en RÉSistance du compagnon">
 		<span>MÊL</span>
 		<input type="number" name="attr_companionMelee" title="MÊLée du compagnon" value="floor((@{companionStrength}+2*@{companionAgility})/3)" disabled>
 		<span>TIR</span>
 		<input type="number" name="attr_companionAim" title="TIR du compagnon" value="floor((@{companionPerception}+@{companionAgility})/2)" disabled>
 		<span>INT</span>
-		<input type="number" name="attr_companionIntelligence" title="INTelligence du compagnon">
+		<input type="number" name="attr_companionIntelligence" class="half-number item-right" title="INTelligence du compagnon">
+		<input type="number" name="attr_companionIntelligenceExp" class="half-number item-left" title="Expérience dépensée en INTelligence du compagnon">
 		<span>VOL</span>
-		<input type="number" name="attr_companionWill" title="VOLonté du compagnon">
+		<input type="number" name="attr_companionWill" class="half-number item-right" title="VOLonté du compagnon">
+		<input type="number" name="attr_companionWillExp" class="half-number item-left" title="Expérience dépensée en VOLonté du compagnon">
 		<span>CHA</span>
-		<input type="number" name="attr_companionCharisma" title="CHArisme du compagnon">
+		<input type="number" name="attr_companionCharisma" class="half-number item-right" title="CHArisme du compagnon">
+		<input type="number" name="attr_companionCharismaExp" class="half-number item-left" title="Expérience dépensée en CHArisme du compagnon">
 		<span>CRÉ</span>
-		<input type="number" name="attr_companionCreativity" title="CRÉativité du compagnon">
+		<input type="number" name="attr_companionCreativity" class="half-number item-right" title="CRÉativité du compagnon">
+		<input type="number" name="attr_companionCreativityExp" class="half-number item-left" title="Expérience dépensée en CRÉativité du compagnon">
 		<span>EMP</span>
-		<input type="number" name="attr_companionAscendancy" title="EMPrise du compagnon">
+		<input type="number" name="attr_companionAscendancy" class="companion-chars-3" title="EMPrise du compagnon">
 		<span>ART</span>
-		<input type="number" name="attr_companionArt" title="ART du compagnon" value="floor((@{companionCharisma}+@{companionCreativity})/2)" disabled>
+		<input type="number" name="attr_companionArt" class="companion-chars-4" title="ART du compagnon" value="floor((@{companionCharisma}+@{companionCreativity})/2)" disabled>
 		<span>TAI</span>
 		<input type="number" name="attr_companionSIZ" title="TAI du compagnon">
 		<span>MV</span>
 		<input type="number" name="attr_companionMove" title="MV du compagnon">
 		<span>BD</span>
-		<input type="number" name="attr_companionDamageBonus" title="BD du compagnon">
+		<input type="number" name="attr_companionDamageBonus" class="companion-chars-7" title="BD du compagnon">
 		<span>PdV</span>
-		<input type="number" name="attr_companionHP_max" title="Points de Vie du compagnon">
+		<input type="number" name="attr_companionHP_max" class="companion-chars-8" title="Points de Vie du compagnon">
 		<span>SBG</span>
-		<input type="number" name="attr_companionSeriousWoundThreshold" title="Seuil de Blessure Grave du compagnon" value="floor(@{companionHP|max}/3)" disabled>
+		<input type="number" name="attr_companionSeriousWoundThreshold" class="companion-chars-1" title="Seuil de Blessure Grave du compagnon" value="floor(@{companionHP|max}/3)" disabled>
 		<span>SBC</span>
-		<input type="number" name="attr_companionCriticalWoundThreshold" title="Seuil de Blessure Critique du compagnon" value="floor(@{companionHP|max}/2)" disabled>
+		<input type="number" name="attr_companionCriticalWoundThreshold" class="companion-chars-2" title="Seuil de Blessure Critique du compagnon" value="floor(@{companionHP|max}/2)" disabled>
 		<span>CM</span>
-		<input type="number" name="attr_companionMaxLoad" title="Charge maximum du compagnon">
+		<input type="number" name="attr_companionMaxLoad" class="companion-chars-3" title="Charge maximum du compagnon">
 		<span>DC</span>
-		<input type="number" name="attr_companionHalfLoad" title="Demi charge du compagnon" value="floor(@{companionMaxLoad}/2)" disabled>
+		<input type="number" name="attr_companionHalfLoad" class="companion-chars-4" title="Demi charge du compagnon" value="floor(@{companionMaxLoad}/2)" disabled>
 		<span>CQ</span>
 		<input type="number" name="attr_companionDailyLoad" title="Charge quotidienne du compagnon" value="floor(@{companionMaxLoad}/4)" disabled>
 		<span>Actuels</span>
 		<input type="number" name="attr_companionHP" title="Points de Vie actuels du compagnon">
 		<span>BG</span>
-		<input type="number" name="attr_companionSeriousWound" title="Blessure(s) Graves(s) actuelles du compagnon" value="0">
+		<input type="number" name="attr_companionSeriousWound" class="companion-chars-7" title="Blessure(s) Graves(s) actuelles du compagnon" value="0">
 		<span>Malus</span>
-		<input type="number" name="attr_companionSeriousWoundPenalty" title="Malus dus aux Blessures Graves du compagnon" readonly>
+		<input type="number" name="attr_companionSeriousWoundPenalty" class="companion-chars-8" title="Malus dus aux Blessures Graves du compagnon" readonly>
 	</div>
 	<hr class="separator">
 	<div class="title">
@@ -833,7 +843,7 @@
 			<option>Zoologie (Savoir)</option>
 		</select>
 		<input type="text" name="attr_companionSkillBranch" title="Domaine de la compétence (si applicable)" placeholder="domaine">
-		<input type="text" name="attr_companionSkillSpeciality" title="Spécialité de la compétence" placeholder="spécialité">
+		<input type="text" name="attr_companionSkillSpecialty" title="Spécialité de la compétence" placeholder="spécialité">
 		<input type="number" name="attr_companionSkillScore" title="Score de la compétence">
 		<input type="number" name="attr_companionSkillExp" title="Expérience dépensée dans la compétence">
 		<input type="hidden" name="attr_companionSkill">
@@ -851,6 +861,8 @@
 		<span>Défense naturelle</span>
 		<input type="number" name="attr_companionNaturalDefense" title="AGI-Malus d'armure">
 		<button class="dice" type="roll" value="&{template:agone-natural-defense} {{name=@{character_name}}} {{NaturalDefense=[[1d10!+@{companionNaturalDefense}+?{Bonus/Malus|0}]]}}" name="roll_npcSkillagnon-natural-defense"></button>
+		<span>Distance</span>
+		<input type="number" name="attr_companionDistanceDodge" title="(AGI+Esquive)/2">
 	</div>
 	<div class="companion-weapons grid">
 		<span class="title">Armes</span>
@@ -921,7 +933,7 @@
 			<option value="Obsidian">Obsidien</option>
 		</select>
 		<span class="title">Sexe</span>
-		<input type="text" name="attr_demonSexe" class="max" title="Sexe du Démon">
+		<input type="text" name="attr_demonSex" class="max" title="Sexe du Démon">
 		<span class="title">Taille</span>
 		<input type="text" name="attr_demonSize" class="max" title="Taille du Démon">
 		<span class="title">Masse</span>
@@ -940,7 +952,7 @@
 		<span class="title">TAI</span>
 		<input type="number" name="attr_demonSIZ" title="TAI du Démon">
 		<span class="title">MV</span>
-		<input type="number" name="attr_demonGroudMove" class="half-number item-right"title="MV au sol du Démon">
+		<input type="number" name="attr_demonGroundMove" class="half-number item-right"title="MV au sol du Démon">
 		<input type="number" name="attr_demonFlightMove" class="half-number item-left"title="MV en vol du Démon">
 		<span class="title">BD</span>
 		<input type="number" name="attr_demonDamageBonus" title="BD du Démon">
@@ -1044,7 +1056,7 @@
 			<option>Zoologie (Savoir)</option>
 		</select>
 		<input type="text" name="attr_demonSkillBranch" title="Domaine de la compétence (si applicable)" placeholder="domaine">
-		<input type="text" name="attr_demonSkillSpeciality" title="Spécialité de la compétence" placeholder="spécialité">
+		<input type="text" name="attr_demonSkillSpecialty" title="Spécialité de la compétence" placeholder="spécialité">
 		<input type="number" name="attr_demonSkillScore" title="Score de la compétence">
 		<input type="number" name="attr_demonSkillExp" title="Expérience dépensée dans la compétence">
 		<input type="hidden" name="attr_demonSkill">
@@ -1065,6 +1077,8 @@
 		<span class="title">Défense naturelle</span>
 		<input type="number" name="attr_demonNaturalDefense" title="AGIlité+Bonus de Corps-Malus de l'armure" value="@{demonAgility}+@{demonArmorPenalty}" disabled>
 		<button class="dice" type="roll" value="/w gm &{template:agone-natural-defense} {{name=@{character_name}}} {{NaturalDefense=[[1d10!+@{demonNaturalDefense}+@{demonArmorPenalty}+?{Bonus/Malus|0}]]}}" name="roll_demon-natural-defense"></button>
+		<span>Distance</span>
+		<input type="number" name="attr_demonDistanceDodge" title="(AGI+Esquive)/2">
 	</div>
 	<div class="demon-weapons grid">
 		<span class="title">Armes</span>
@@ -1289,7 +1303,7 @@
 			<option>Zoologie (Savoir)</option>
 		</select>
 			<input type="text" name="attr_npcSkillBranch" class="max" title="Domaine de la compétence (si applicable)" placeholder="domaine">
-			<input type="text" name="attr_npcSkillSpeciality" class="max" title="Spécialité de la compétence" placeholder="spécialité">
+			<input type="text" name="attr_npcSkillSpecialty" class="max" title="Spécialité de la compétence" placeholder="spécialité">
 			<input type="number" name="attr_npcSkillScore" title="Score de la compétence">
 			<input type="hidden" name="attr_npcSkill">
 			<button class="dice" type="roll" value="/w gm &{template:agone-skills} {{name=@{character_name}}} {{Skill=@{npcSkill} : [[1d10!+@{npcSkillScore}+?{Caractéristique|AGIlité, @{npcAgility}+@{npcBodyBonus}|FORce, @{npcStrength}+@{npcBodyBonus}|PERception, @{npcPerception}+@{npcBodyBonus}|RÉSistance, @{npcStamina}+@{npcBodyBonus}|INTelligence, @{npcIntelligence}+@{npcSpiritBonus}|VOLonté, @{npcWill}+@{npcSpiritBonus}|CHArisme, @{npcCharisma}+@{npcSoulBonus}|CRÉativité, @{npcCreativity}+@{npcSoulBonus}|MÊLée, @{npcMelee}+@{npcBodyBonus}|TIR, @{npcAim}+@{npcBodyBonus}}+?{Bonus/Malus|0}]]}}" name="roll_npc-skill"></button>
@@ -1489,7 +1503,6 @@
 		getAttrs(['repeating_pc-weapons_pcFightStyle', 'repeating_pc-weapons_pcWeaponStyle', 'repeating_pc-weapons_pcAimOrNot', 'pcDamageBonus', 'pcMelee', 'pcAim'], function(v) {
 			var db = parseInt(v['pcDamageBonus']);
 			var ws = v['repeating_pc-weapons_pcWeaponStyle'];
-			console.log(v);
 			if (ws == 'missile') {
 				setAttrs({'repeating_pc-weapons_pcFightStyle': v['pcAim']});
 				setAttrs({'repeating_pc-weapons_pcAimOrNot': -db});
@@ -1502,7 +1515,7 @@
 			}
 		});
 	});
-	on("change:repeating_pc-arts remove:repeating_pc-arts", function() {
+	on("sheet:opened change:repeating_pc-arts remove:repeating_pc-arts", function() {
 		getSectionIDs("repeating_pc-arts", function(c) {
 			var s = "?{Art|";
 			if (c.length > 0) {
@@ -1523,7 +1536,7 @@
 			}
 		});
 	});
-	on("change:repeating_pc-skills remove:repeating_pc-skills", function() {
+	on("sheet:opened change:repeating_pc-skills remove:repeating_pc-skills", function() {
 		getSectionIDs("repeating_pc-skills", function(c) {
 			var s = "?{Compétence|";
 			var z = 1;
