remove vampire and mage from Other Traits sub headers

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -922,10 +922,8 @@
                         <div class="mortal werewolf promethean changeling geist mummy hunter demon beast">
                             <div class="subheader">
                                 <span class="mortal1 mortal2" data-i18n="other" >Other</span>
-                                <div class="organization" data-i18n="ceremonies" >Ceremonies</div>
-                                <span class="vampire" data-i18n="disciplines" >Disciplines</span>
+                                <span class="organization" data-i18n="ceremonies" >Ceremonies</span>
                                 <span class="werewolf" data-i18n="gifts-rites" >Gifts/Rites</span>
-                                <span class="mage" data-i18n="arcana" >Arcana</span>
                                 <span class="promethean" data-i18n="transmutations" >Transmutations</span>
                                 <span class="changeling" data-i18n="contracts" >Contracts</span>
                                 <span class="geist1" data-i18n="manifestations" >Manifestations</span>
